crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_type_name.txt
Q = (identifier) @name ::
------------------ DIAGNOSTICS -------------------
error: expected a type name after `::`
 --> query.ptk:1:26
  |
1 | Q = (identifier) @name ::
  |                          ^
  |
help: e.g., `::MyType`
